--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,13 +1,10 @@
 <header>
     <nav>
-        <figure>
-            <img src="img/logo.svg" alt="Funda"/>
-        </figure>
+        <a href="/">
+            <figure><img src="img/logo.svg" alt="Funda"/></figure>
+        </a>
         <ul>
-            <li><a href="#stap1">Stap 1</a></li>
-            <li><a href="#stap2">Stap 2</a></li>
-            <li><a href="#stap3">Stap 3</a></li>
-            <li><a href="#stap4">Stap 4</a></li>
+            <li><a href="/wizzard">Wizzard</a></li>
         </ul>
     </nav>
 </header>
