Updated the routes. Added new views. Minified css & js. Async css and js

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,8 @@
-<section style="height: 50vh;background-image: url(assets.fstatic.nl/master_838/assets/components/search-banner/images/ohd-herenhuis-silhouet.svg)">test
+<section>
+    <span>&nbsp;</span>
+    <span>&nbsp;</span>
 </section>
+
 {{> search}}
 
 {{> footer}}
