--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,6 @@
 <section>
 
-    <h3>{{TotaalAantalObjecten}} Resultaten</h3>
+    <h3>{{data.TotaalAantalObjecten}} resultaten voor "{{data.Metadata.Titel}}""</h3>
     {{#each data.Objects}}
     <article>
         <img src="{{FotoMedium}}" alt="{{Adres}}" />
