--- a/views/wizzard.handlebars
+++ b/views/wizzard.handlebars
@@ -1,13 +1,14 @@
-<section id="stap1">
-            <h3>Stap 1. Ik ben op zoek naar een</h3>
-            <figure>
-                <img src="/img/eengezins-rechts.svg" alt="">
-            </figure>
-            <form class="search">
-                <fieldset>
-                    <input id="koop" type="radio" name="type" value="koop" checked>
-                    <label for="koop">
-                        <figure>
+<main>
+    <section id="stap1">
+        <h3>Stap 1. Ik ben op zoek naar een</h3>
+        <figure>
+            <img src="/img/eengezins-rechts.svg" alt="">
+        </figure>
+        <form class="search">
+            <fieldset>
+                <input id="koop" type="radio" name="type" value="koop" checked>
+                <label for="koop">
+                    <figure>
                         <img src="/img/eengezins-rechts.svg" alt="">
                     </figure>
                     Koop woning</label>
@@ -18,18 +19,18 @@
                             <img src="/img/huur.svg" alt="">
                         </figure>
                         Huur woning</label>
-                </fieldset>
-                <p>in</p>
-                <fieldset>
+                    </fieldset>
+                    <p>in</p>
+                    <fieldset>
 
-                    <input id="search" type="text" name="search" placeholder="Locatie" required>
+                        <input id="search" type="text" name="search" placeholder="Locatie" required>
 
-                    <button type="submit">Volgende stap</button>
-                </fieldset>
-            </form>
-        </section>
-        <!-- Page 2 -->
-        <section id="stap2">
+                        <button type="submit">Volgende stap</button>
+                    </fieldset>
+                </form>
+            </section>
+            <!-- Page 2 -->
+            <section id="stap2">
                 <h3>Stap 2. Mijn huis heeft in ieder geval</h3>
                 <figure>
                     <img src="/img/eengezins-rechts.svg" alt="">
@@ -91,3 +92,4 @@
         </section>
         <!-- Page 5 -->
         <section id="huis_detail"></section>
+</main>
