--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /****
 * General
 ****/
@@ -6,35 +5,13 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  display: flex;
-  flex-wrap: wrap; }
+}
 
 ul,
 ol {
   list-style: none;
   text-decoration: none; }
 
-h3 {
-  text-align: center;
-  margin: 0.5em; }
-
-figure img {
-  width: 100%;
-  height: auto; }
-
-button,
-input[type="submit"],
-[role="button"] {
-  background: #0071B3;
-  border: 0;
-  padding: 1em;
-  min-width: 10em;
-  border-radius: .2em;
-  text-decoration: none;
-  color: white;
-  font-size: 1em;
-  text-align: center;
-  width: 100%; }
 
 header {
   background-color: #F7A100;
@@ -73,11 +50,271 @@ header {
     header figure img {
       width: 6em; }
 
+/**
+** Homepage
+**/
+header + section {
+    height: 40vh;
+    background-color: rgb(230,242,247);
+    background-image: url("/img/banner.svg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    display: flex;
+    justify-content: space-around;*/
+}
+header + section span {
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+    height: 100%;
+}
+header + section span:first-child {
+    background-image: url("/img/superman.svg");
+    width: 8em;
+}
+header + section span:last-child {
+    background-image: url("/img/eengezins-rechts.svg");
+    width: 20em;
+}
+form.home {
+    background-color: #F7A100;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 1em 0;
+}
+
+@media (min-width: 50em){
+    form.home {
+        width: 80vw;
+        margin: auto;
+    }
+}
+
+form.home > section {
+    width: 95%;
+}
+
+form.home .location {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+}
+
+div.select{
+    background: white;
+    margin-right: .5em;
+    padding: 0em 0.5em;
+    box-sizing: border-box;
+}
+
+div.select{
+    border-radius: 0.2em;
+}
+@media (max-width: 40em){
+    form.home input[type="text"],
+    div.select{
+        border-radius: 0em;
+        width: 100%;
+        margin-bottom: 0.5em;
+    }
+}
+
+div.select:first-of-type{
+    border-radius: 0 0.2em 0.2em 0;
+}
+select{
+    box-sizing: border-box;
+    border: none;
+    background-color: white;
+    padding: 1em 0.5em;
+    height: 4.5em;
+    min-width: 6em;
+    border-radius: none;
+}
+
+form.home input[type="text"] {
+  padding: 1em 0.5em;
+  border: none;
+  max-width: calc( 100% - 6em);
+  min-width: calc( 50% - 6em);
+  box-sizing: border-box;
+  margin: 1em 0;
+  font-size: 1em;
+  margin-right: .1em;
+  border-radius: 0.2em 0 0 0.2em;;
+}
+
+section input[type="radio"],
+section input[type="checkbox"] {
+  opacity: 0;
+  position: absolute;
+  left: 9999999; }
+
+input + label {
+  transition: .3s;
+  display: flex;
+  flex-direction: column-reverse;
+  float: left;
+  margin: auto;
+  cursor: pointer;
+  text-align: center;
+  justify-content: center;
+  border: solid #F7A100;
+  background: #F7A100;
+  color: white;
+}
+
+input[type="radio"]:checked + label,
+input[type="checkbox"]:checked + label {
+  background-color: #F8C463;
+  border-radius: 0.5em;
+  color: #53241B;
+}
+
+input[type="radio"]:focus + label,
+input[type="radio"]:hover + label,
+input[type="checkbox"]:focus + label,
+input[type="checkbox"]:hover + label {
+  border: solid #F7A100;
+  border-radius: 0.2em;
+}
+
+label {
+  padding: 0.8em 1em;
+}
+
+input[type="submit"]{
+    padding: 1em 2em;
+    border: none;
+    background: #0071B3;
+    color: white;
+    font-size: 1em;
+}
+
+form + section {
+    width: 100vw;
+    padding: 2em 1em;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+}
+form + section h3 {
+    width: 100%;
+
+}
+
+@media (min-width: 50em){
+    form + section {
+        width: 80vw;
+        margin: auto;
+        padding: 2em 0;
+    }
+}
+
+
+/**
+** Media item
+**/
+section article {
+  width: 20em;
+  position: relative;
+  border-bottom: 0.1em solid #ededed;
+  margin-bottom: 1em; }
+
+section article h1,
+section article p {
+  font-weight: normal;
+  line-height: 1.5em;
+  font-size: 1em;
+  margin: 0;
+  margin: 0.5em 0; }
+  section article h1 a,
+  section article p a {
+    color: #0071B3;
+    text-decoration: none; }
+  section article h1 small,
+  section article p small {
+    font-weight: normal;
+    display: block; }
+
+section article a::after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  content: ''; }
+
+section article footer {
+  display: flex;
+  flex-wrap: wrap; }
+  section article footer p {
+    margin-right: 1em; }
+
+.sup {
+  position: relative;
+  bottom: 1ex;
+  font-size: 80%; }
+
+p.kamers::before {
+  content: '●';
+  font-size: 0.8em;
+  margin-right: 0.5em; }
+
+/**
+** Steps
+**/
+main section[id="stap1"] p {
+  text-align: center; }
+
+main input[type="text"] {
+  padding: 1em 0.5em;
+  border: none;
+  width: 100%;
+  box-sizing: border-box;
+  margin: 1em 0;
+  font-size: 1em; }
+
+main form[class="search"] fieldset:last-child {
+  background: #F7A100;
+  padding: 1em 0.5em;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  transition: .3s;
+  margin-top: 1em;
+  width: 100%; }
+  form[class="search"] fieldset:last-child:valid input + button {
+    background-color: #C0CE06; }
+
+main button,
+main input[type="submit"],
+[role="button"] {
+  background: #0071B3;
+  border: 0;
+  padding: 1em;
+  min-width: 10em;
+  border-radius: .2em;
+  text-decoration: none;
+  color: white;
+  font-size: 1em;
+  text-align: center;
+  width: 100%; }
+
 fieldset,
 h3 {
   margin: 0;
   padding: 0;
-  border: 0; }
+  border: 0;
+}
+
+figure img {
+  width: 100%;
+  height: auto;
+}
 
 main {
   display: flex;
@@ -150,145 +387,13 @@ main {
       main > section section footer {
         align-content: center; }
 
-body > footer {
-  width: 100vw;
-  height: 100%;
-  background: #E6F2F7;
-  padding: 1em 0.5em;
-  box-sizing: border-box; }
-  body > footer img {
-    width: 100%; }
-
-@media (min-width: 32em) {
-  main {
-    width: calc(100vw / 3 * 2);
-    height: calc(100vh - 3.5em); }
-    main > section {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      /* flex-wrap: wrap; */
-      flex-direction: column;
-      padding: 1em 0.5em;
-      width: 100%;
-      box-sizing: border-box; }
-  body > footer {
-    height: calc(100vh - 3.5em);
-    width: calc(100vw /3);
-    overflow: scroll; } }
-
-/****
-* Components
-****/
-/*--------- form --------------*/
-form {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  align-items: center; }
-
-/*--------- media items --------------*/
-section article {
-  width: 20em;
-  position: relative;
-  border-bottom: 0.1em solid #ededed;
-  margin-bottom: 1em; }
-
-section article h1,
-section article p {
-  font-weight: normal;
-  line-height: 1.5em;
-  font-size: 1em;
-  margin: 0;
-  margin: 0.5em 0; }
-  section article h1 a,
-  section article p a {
-    color: #0071B3;
-    text-decoration: none; }
-  section article h1 small,
-  section article p small {
-    font-weight: normal;
-    display: block; }
-
-section article a::after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  content: ''; }
-
-section article footer {
-  display: flex;
-  flex-wrap: wrap; }
-  section article footer p {
-    margin-right: 1em; }
-
-.sup {
-  position: relative;
-  bottom: 1ex;
-  font-size: 80%; }
-
-p.kamers::before {
-  content: '●';
-  font-size: 0.8em;
-  margin-right: 0.5em; }
-
-/*--------- detailpage --------------*/
-.huis_details > article {
-  min-width: 100%;
-  display: flex;
-  flex-direction: column; }
-  .huis_details > article h1 {
-    font-size: 2.25rem;
-    line-height: 2.75rem;
-    font-weight: 400;
-    color: #333; }
-    .huis_details > article h1 span {
-      font-size: 1rem;
-      display: block;
-      color: #999;
-      font-weight: 400; }
-  .huis_details > article p {
-    max-width: 30em;
-    word-wrap: break-word;
-    margin: 2em auto; }
-  .huis_details > article figure {
-    margin: 0;
-    min-width: 100%;
-    min-height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 1em;
-    overflow: hidden;
-    position: relative;
-    box-sizing: border-box; }
-    .huis_details > article figure img {
-      z-index: 1;
-      max-width: 100%;
-      background: #fff; }
-
-@media (max-width: 30em) {
-  .huis_details > article {
-    display: flex;
-    flex-direction: column;
-    margin: 0;
-    padding: 0; }
-    .huis_details > article h1,
-    .huis_details > article figcaption {
-      padding: 1em;
-      box-sizing: border-box; } }
-
-/*--------- rating --------------*/
-body > section input[type="radio"],
-body > section input[type="checkbox"] {
+main section input[type="radio"],
+main section input[type="checkbox"] {
   opacity: 0;
   position: absolute;
   left: 9999999; }
 
-fieldset input + label {
+main fieldset input + label {
   transition: .3s;
   display: flex;
   flex-direction: column-reverse;
@@ -298,100 +403,25 @@ fieldset input + label {
   text-align: center;
   justify-content: center;
   border: solid white;
-  background: white; }
+  background: white;
+  color: #F7A100;
+}
 
-fieldset input[type="radio"]:checked + label,
-fieldset input[type="checkbox"]:checked + label {
+main fieldset input[type="radio"]:checked + label,
+main fieldset input[type="checkbox"]:checked + label {
   background-color: #F7A100;
   border-radius: 0.5em;
   border: solid white; }
 
-fieldset input[type="radio"]:focus + label,
-fieldset input[type="radio"]:hover + label,
-fieldset input[type="checkbox"]:focus + label,
-fieldset input[type="checkbox"]:hover + label {
+main fieldset input[type="radio"]:focus + label,
+main fieldset input[type="radio"]:hover + label,
+main fieldset input[type="checkbox"]:focus + label,
+main fieldset input[type="checkbox"]:hover + label {
   border: solid #F7A100;
   border-radius: 0.5em; }
 
-fieldset label {
+main fieldset label {
   padding: 2em 1em; }
-  fieldset label figure {
+  main fieldset label figure {
     height: 3em;
     width: 4em; }
-
-/*--------- step1 --------------*/
-section[id="stap1"] p {
-  text-align: center; }
-
-input[type="text"] {
-  padding: 1em 0.5em;
-  border: none;
-  width: 100%;
-  box-sizing: border-box;
-  margin: 1em 0;
-  font-size: 1em; }
-
-form[class="search"] fieldset:last-child {
-  background: #F7A100;
-  padding: 1em 0.5em;
-  box-sizing: border-box;
-  display: flex;
-  flex-direction: column;
-  transition: .3s;
-  margin-top: 1em;
-  width: 100%; }
-  form[class="search"] fieldset:last-child:valid input + button {
-    background-color: #C0CE06; }
-
-/****
-* Helpers
-****/
-/*--------- tooltip --------------*/
-.hidden {
-  display: none; }
-
-div[id="marker-tooltip"] {
-  position: absolute;
-  visibility: hidden;
-  transition: visibility .3s;
-  text-align: center;
-  line-height: 150%;
-  padding: 2em;
-  height: 0;
-  overflow: hidden;
-  z-index: 1; }
-
-div.hover {
-  background-color: white;
-  border: 0.1em solid #E6F2F7;
-  visibility: visible;
-  height: auto; }
-
-
-.active {
-    background-color: #DE9000;
-}
-
-
-/**
-** Homepage
-**/
-form.home {
-    background-color: #F7A100;
-}
-
-select{
-    float: left;
-    background-color: red;
-    border: none;
-    padding: 1em 0.5em;
-    height: 10em;
-    width: 100%;
-}
-/*input[type="text"] {
-  padding: 1em 0.5em;
-  border: none;
-  width: 100%;
-  box-sizing: border-box;
-  margin: 1em 0;
-  font-size: 1em; }*/
