--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,7 +1,7 @@
 <header>
     <nav>
         <a href="/">
-            <figure><img src="img/logo.svg" alt="Funda"/></figure>
+            <figure><img src="/img/logo.svg" alt="Funda"/></figure>
         </a>
         <ul>
             <li><a href="/wizzard">Wizzard</a></li>
