--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -3,7 +3,7 @@
     <h3>{{data.TotaalAantalObjecten}} resultaten voor "{{data.Metadata.Titel}}""</h3>
     {{#each data.Objects}}
     <article>
-        <img src="{{FotoMedium}}" alt="{{Adres}}" />
+        <img height="200" src="{{FotoMedium}}" alt="{{Adres}}" />
         <h1>
             <a id="{{Id}}" href="/house/{{Id}}">{{Adres}}</a>
             <small>{{Postcode}} {{Woonplaats}}</small>
