Updated the readme

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,10 +10,9 @@
     {{> criticalcss}}
     <script> loadCSS('/css/style.min.css'); </script>
     <noscript>
-        <link rel="stylesheet" href="/css/style.min.css">
+        <link rel="stylesheet" href="/css/style.css">
     </noscript>
 
-    <!-- <script src="/js/script.min.js" defer></script> -->
     {{> javascript}}
 </head>
 <body>
