--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>{{title }}</title>
+    <link href="/manifest.json" rel="manifest">
 
     <!-- critical css -->
     {{> loadcss}}
