--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,7 +9,7 @@
     <!-- critical css -->
     {{> loadcss}}
     {{> criticalcss}}
-    <script> loadCSS('/css/style.min.css'); </script>
+    <script> loadCSS('/css/style.css'); </script>
     <noscript>
         <link rel="stylesheet" href="/css/style.css">
     </noscript>
