--- a/views/partials/javascript.handlebars
+++ b/views/partials/javascript.handlebars
@@ -15,4 +15,13 @@ if ('serviceWorker' in navigator) {
         });
     });
 }
+
+// 
+// var homeForm = document.querySelector('.home');
+//
+// homeForm.addEventListener("submit", function(e){
+//     e.preventdefault();
+//     console.log(homeForm);
+// });
+
 </script>
