--- a/views/offline.handlebars
+++ b/views/offline.handlebars
@@ -1,1 +1,2 @@
-<h1>There is a problem with the internet connection</h1>
+
+<h1>Something went wrong. There is a problem with the internet connection</h1>
