--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,6 +1,6 @@
-<section>
+<section class="home_content">
 
-    <h3>{{data.TotaalAantalObjecten}} resultaten voor "{{data.Metadata.Titel}}""</h3>
+    <h3>{{data.TotaalAantalObjecten}} resultaten voor "{{data.Metadata.Titel}}"</h3>
     {{#each data.Objects}}
     <article>
         <img height="200" src="{{FotoMedium}}" alt="{{Adres}}" />
