--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -1,25 +1,32 @@
 <form class="home" action="/" method="post">
     <section class="header">
         <input id="koop" type="radio" name="type" value="koop" checked>
+
         <label for="koop">Koop</label>
 
         <input id="huur" type="radio" name="type" value="huur">
         <label for="huur">Huur</label>
     </section>
     <section class="location">
-        <input type="text" name="query" id="autocomplete-input" placeholder="Plaats, buurt, adres etc.">
-
+        <!-- <div class="autocomplete"> -->
         <div class="select">
-            <select name="radius" id="Afstand" autocomplete="off">
-                <option selected="" value="0">+ 0 km</option>
-                <option value="1">+ 1 km</option>
-                <option value="2">+ 2 km</option>
-                <option value="5">+ 5 km</option>
-                <option value="10">+ 10 km</option>
-                <option value="15">+ 15 km</option>
-            </select>
-            <!-- <label for="Afstand">Straal</label> -->
-        </div>
+            <label for="autocomplete-input">Zoeken
+                <input type="text" name="query" id="autocomplete-input" placeholder="Plaats, buurt, adres etc.">
+            </label>
+
+                <select name="radius" id="Afstand" autocomplete="off">
+                    <option selected="" value="0">+ 0 km</option>
+                    <option value="1">+ 1 km</option>
+                    <option value="2">+ 2 km</option>
+                    <option value="5">+ 5 km</option>
+                    <option value="10">+ 10 km</option>
+                    <option value="15">+ 15 km</option>
+                </select>
+                <!-- <label for="Afstand">Straal</label> -->
+                <ul id="autocomplete-list" name="query" class="autocomplete-list hidden">
+                </ul>
+            </div>
+        <!-- </div> -->
 
             <div class="select">
                 <label for="range_van" >Van
@@ -56,9 +63,7 @@
                         <option value="2000000">€ 2.000.000</option>
                     </select>
                 </label>
-            </div>
 
-            <div class="select">
                 <label for="range_tot">Tot
                     <select id="range_tot" name="prijs_tot" autocomplete="off">
                         <!-- <option value="other">Anders</option> -->
