--- a/views/partials/search.handlebars
+++ b/views/partials/search.handlebars
@@ -2,15 +2,15 @@
     <section class="header">
         <input id="koop" type="radio" name="type" value="koop" checked>
 
-        <label for="koop">Koop</label>
+        <label for="koop">Koopwoning</label>
 
         <input id="huur" type="radio" name="type" value="huur">
-        <label for="huur">Huur</label>
+        <label for="huur">Huurwoning</label>
     </section>
     <section class="location">
         <!-- <div class="autocomplete"> -->
         <div class="select">
-            <label for="autocomplete-input">Zoeken
+            <label for="autocomplete-input">Zoeken in
                 <input type="text" name="query" id="autocomplete-input" placeholder="Plaats, buurt, adres etc.">
             </label>
 
@@ -32,7 +32,7 @@
                 <label for="range_van" >Van
                     <select id="range_van" name="prijs_van">
                         <!-- <option value="other">Anders</option> -->
-                        <option selected="" value="0">€ 0</option>
+                        <option selected value="0">€ 0</option>
                         <option value="50000">€ 50.000</option>
                         <option value="75000">€ 75.000</option>
                         <option value="100000">€ 100.000</option>
@@ -94,7 +94,7 @@
                         <option value="1000000">€ 1.000.000</option>
                         <option value="1250000">€ 1.250.000</option>
                         <option value="1500000">€ 1.500.000</option>
-                        <option value="2000000">€ 2.000.000</option>
+                        <option selected value="2000000">€ 2.000.000</option>
                         <!-- <option selected="" value="ignore_filter">Geen maximum</option> -->
                     </select>
                 </label>
