--- a/public/css/critical.css
+++ b/public/css/critical.css
@@ -5,6 +5,11 @@ body {
   box-sizing: border-box;
 }
 
+ul {
+  list-style: none;
+  text-decoration: none;
+}
+
 header {
   background-color: rgb(247, 161, 0);
   padding: 0px;
@@ -24,32 +29,6 @@ header figure img {
   width: 6em;
 }
 
-header + section {
-  height: 40vh;
-  background-color: rgb(230, 242, 247);
-  background-image: url(/img/banner.svg);
-  background-size: contain;
-  background-position: 50% 100%;
-  background-repeat: no-repeat no-repeat;
-}
-
-header + section span {
-  background-size: contain;
-  height: 100%;
-  background-position: 50% 100%;
-  background-repeat: no-repeat no-repeat;
-}
-
-header + section span:first-child {
-  background-image: url(/img/superman.svg);
-  width: 8em;
-}
-
-header + section span:last-child {
-  background-image: url(/img/eengezins-rechts.svg);
-  width: 20em;
-}
-
 form.home {
   background-color: rgb(247, 161, 0);
   padding: 1em 0px;
@@ -64,6 +43,7 @@ form.home {
 
 form.home > section {
   width: 95%;
+  margin-bottom: 0.5em;
 }
 
 div.select {
@@ -71,15 +51,12 @@ div.select {
   margin-right: 0.5em;
   padding: 0em 0.5em;
   box-sizing: border-box;
-  background-position: initial initial;
-  background-repeat: initial initial;
-}
-
-div.select {
   border-top-left-radius: 0.2em;
   border-top-right-radius: 0.2em;
   border-bottom-right-radius: 0.2em;
   border-bottom-left-radius: 0.2em;
+  background-position: initial initial;
+  background-repeat: initial initial;
 }
 
 @media (max-width: 40em) {
@@ -89,16 +66,17 @@ div.select {
     border-top-right-radius: 0em;
     border-bottom-right-radius: 0em;
     border-bottom-left-radius: 0em;
-    width: 100%;
     margin-bottom: 0.5em;
   }
 }
 
-div.select:first-of-type {
-  border-top-left-radius: 0px;
+div.select {
+  border-top-left-radius: 0.2em;
   border-top-right-radius: 0.2em;
   border-bottom-right-radius: 0.2em;
-  border-bottom-left-radius: 0px;
+  border-bottom-left-radius: 0.2em;
+  overflow: hidden;
+  margin-bottom: 0.5em;
 }
 
 select {
@@ -113,10 +91,9 @@ select {
 form.home input[type="text"] {
   padding: 1em 0.5em;
   border: none;
-  max-width: calc(100% - 6em);
-  min-width: calc(50% - 6em);
+  min-width: 13em;
   box-sizing: border-box;
-  margin: 1em 0.1em 1em 0px;
+  margin: 0px 0.1em 0px 0px;
   font-size: 1em;
   border-top-left-radius: 0.2em;
   border-top-right-radius: 0px;
@@ -159,6 +136,10 @@ input[type="submit"] {
   background-color: rgb(0, 113, 179);
   color: white;
   font-size: 1em;
+  border-top-left-radius: 0.2em;
+  border-top-right-radius: 0.2em;
+  border-bottom-right-radius: 0.2em;
+  border-bottom-left-radius: 0.2em;
   background-position: initial initial;
   background-repeat: initial initial;
 }
@@ -170,6 +151,7 @@ form + section {
 
 form + section h3 {
   width: 100%;
+  margin-bottom: 1em;
 }
 
 @media (min-width: 50em) {
@@ -189,6 +171,49 @@ section article {
   margin-bottom: 1em;
 }
 
+section article h1,
+section article p {
+  font-weight: normal;
+  line-height: 1.5em;
+  font-size: 1em;
+  margin: 0.5em 0px;
+}
+
+section article h1 a {
+  color: rgb(0, 113, 179);
+  text-decoration: none;
+}
+
+section article h1 small {
+  font-weight: normal;
+  display: block;
+}
+
+section article a::after {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  right: 0px;
+  content: '';
+}
+
+section article footer p {
+  margin-right: 1em;
+}
+
+.sup {
+  position: relative;
+  bottom: 1ex;
+  font-size: 80%;
+}
+
+p.kamers::before {
+  content: '\25CF';
+  font-size: 0.8em;
+  margin-right: 0.5em;
+}
+
 h3 {
   margin: 0px;
   padding: 0px;
@@ -198,4 +223,18 @@ h3 {
 figure img {
   width: 100%;
   height: auto;
+}
+
+.location {
+  position: relative;
+}
+
+.select ul {
+  height: 100%;
+  padding: 0px;
+}
+
+.hidden {
+  display: none;
+  height: 0%;
 }
