--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,7 +8,7 @@
 
     <!-- critical css -->
     {{> loadcss}}
-    <!-- {{> criticalcss}} -->
+    {{> criticalcss}}
     <script> loadCSS('/css/style.css'); </script>
     <noscript>
         <link rel="stylesheet" href="/css/style.css">
