--- a/views/partials/criticalcss.handlebars
+++ b/views/partials/criticalcss.handlebars
@@ -1,3 +1,243 @@
 <style>
-    body{margin:0;padding:0;font-family:sans-serif;box-sizing:border-box}header{background-color:#f7a100;padding:0;margin:0;min-width:100vw}header figure{height:auto;width:6em;overflow:hidden;margin:0;padding:.5em 1.5em}header figure img{width:6em}header+section{height:40vh;background-color:#e6f2f7;background-image:url(/img/banner.svg);background-size:contain;background-position:50% 100%;background-repeat:no-repeat no-repeat}header+section span{background-size:contain;height:100%;background-position:50% 100%;background-repeat:no-repeat no-repeat}header+section span:first-child{background-image:url(/img/superman.svg);width:8em}header+section span:last-child{background-image:url(/img/eengezins-rechts.svg);width:20em}form.home{background-color:#f7a100;padding:1em 0}@media(min-width:50em){form.home{width:80vw;margin:auto}}form.home>section{width:95%}div.select{background-color:white;margin-right:.5em;padding:0 .5em;box-sizing:border-box;background-position:initial initial;background-repeat:initial initial}div.select{border-top-left-radius:.2em;border-top-right-radius:.2em;border-bottom-right-radius:.2em;border-bottom-left-radius:.2em}@media(max-width:40em){form.home input[type="text"],div.select{border-top-left-radius:0;border-top-right-radius:0;border-bottom-right-radius:0;border-bottom-left-radius:0;width:100%;margin-bottom:.5em}}div.select:first-of-type{border-top-left-radius:0;border-top-right-radius:.2em;border-bottom-right-radius:.2em;border-bottom-left-radius:0}select{box-sizing:border-box;border:0;background-color:white;padding:1em .5em;height:4.5em;min-width:6em}form.home input[type="text"]{padding:1em .5em;border:0;max-width:calc(100% - 6em);min-width:calc(50% - 6em);box-sizing:border-box;margin:1em .1em 1em 0;font-size:1em;border-top-left-radius:.2em;border-top-right-radius:0;border-bottom-right-radius:0;border-bottom-left-radius:.2em}section input[type="radio"]{opacity:0;position:absolute}input+label{float:left;margin:auto;text-align:center;border:solid #f7a100;background-color:#f7a100;color:white;background-position:initial initial;background-repeat:initial initial}input[type="radio"]:checked+label{background-color:#f8c463;border-top-left-radius:.5em;border-top-right-radius:.5em;border-bottom-right-radius:.5em;border-bottom-left-radius:.5em;color:#53241b}label{padding:.8em 1em}input[type="submit"]{padding:1em 2em;border:0;background-color:#0071b3;color:white;font-size:1em;background-position:initial initial;background-repeat:initial initial}form+section{width:100vw;padding:2em 1em}form+section h3{width:100%}@media(min-width:50em){form+section{width:80vw;margin:auto;padding:2em 0}}section article{width:20em;position:relative;border-bottom-width:.1em;border-bottom-style:solid;border-bottom-color:#ededed;margin-bottom:1em}h3{margin:0;padding:0;border:0}figure img{width:100%;height:auto}
+    body {
+      margin: 0px;
+      padding: 0px;
+      font-family: sans-serif;
+      box-sizing: border-box;
+    }
+
+    ul {
+      list-style: none;
+      text-decoration: none;
+    }
+
+    header {
+      background-color: rgb(247, 161, 0);
+      padding: 0px;
+      margin: 0px;
+      min-width: 100vw;
+    }
+
+    header figure {
+      height: auto;
+      width: 6em;
+      overflow: hidden;
+      margin: 0px;
+      padding: 0.5em 1.5em;
+    }
+
+    header figure img {
+      width: 6em;
+    }
+
+    form.home {
+      background-color: rgb(247, 161, 0);
+      padding: 1em 0px;
+    }
+
+    @media (min-width: 50em) {
+      form.home {
+        width: 80vw;
+        margin: auto;
+      }
+    }
+
+    form.home > section {
+      width: 95%;
+      margin-bottom: 0.5em;
+    }
+
+    div.select {
+      background-color: white;
+      margin-right: 0.5em;
+      padding: 0em 0.5em;
+      box-sizing: border-box;
+      border-top-left-radius: 0.2em;
+      border-top-right-radius: 0.2em;
+      border-bottom-right-radius: 0.2em;
+      border-bottom-left-radius: 0.2em;
+      background-position: initial initial;
+      background-repeat: initial initial;
+    }
+
+    @media (max-width: 40em) {
+      form.home input[type="text"],
+      div.select {
+        border-top-left-radius: 0em;
+        border-top-right-radius: 0em;
+        border-bottom-right-radius: 0em;
+        border-bottom-left-radius: 0em;
+        margin-bottom: 0.5em;
+      }
+    }
+
+    div.select {
+      border-top-left-radius: 0.2em;
+      border-top-right-radius: 0.2em;
+      border-bottom-right-radius: 0.2em;
+      border-bottom-left-radius: 0.2em;
+      overflow: hidden;
+      margin-bottom: 0.5em;
+    }
+
+    select {
+      box-sizing: border-box;
+      border: none;
+      background-color: white;
+      padding: 1em 0.5em;
+      height: 4.5em;
+      min-width: 6em;
+    }
+
+    form.home input[type="text"] {
+      padding: 1em 0.5em;
+      border: none;
+      min-width: 13em;
+      box-sizing: border-box;
+      margin: 0px 0.1em 0px 0px;
+      font-size: 1em;
+      border-top-left-radius: 0.2em;
+      border-top-right-radius: 0px;
+      border-bottom-right-radius: 0px;
+      border-bottom-left-radius: 0.2em;
+    }
+
+    section input[type="radio"] {
+      opacity: 0;
+      position: absolute;
+    }
+
+    input + label {
+      float: left;
+      margin: auto;
+      text-align: center;
+      border: solid rgb(247, 161, 0);
+      background-color: rgb(247, 161, 0);
+      color: white;
+      background-position: initial initial;
+      background-repeat: initial initial;
+    }
+
+    input[type="radio"]:checked + label {
+      background-color: rgb(248, 196, 99);
+      border-top-left-radius: 0.5em;
+      border-top-right-radius: 0.5em;
+      border-bottom-right-radius: 0.5em;
+      border-bottom-left-radius: 0.5em;
+      color: rgb(83, 36, 27);
+    }
+
+    label {
+      padding: 0.8em 1em;
+    }
+
+    input[type="submit"] {
+      padding: 1em 2em;
+      border: none;
+      background-color: rgb(0, 113, 179);
+      color: white;
+      font-size: 1em;
+      border-top-left-radius: 0.2em;
+      border-top-right-radius: 0.2em;
+      border-bottom-right-radius: 0.2em;
+      border-bottom-left-radius: 0.2em;
+      background-position: initial initial;
+      background-repeat: initial initial;
+    }
+
+    form + section {
+      width: 100vw;
+      padding: 2em 1em;
+    }
+
+    form + section h3 {
+      width: 100%;
+      margin-bottom: 1em;
+    }
+
+    @media (min-width: 50em) {
+      form + section {
+        width: 80vw;
+        margin: auto;
+        padding: 2em 0px;
+      }
+    }
+
+    section article {
+      width: 20em;
+      position: relative;
+      border-bottom-width: 0.1em;
+      border-bottom-style: solid;
+      border-bottom-color: rgb(237, 237, 237);
+      margin-bottom: 1em;
+    }
+
+    section article h1,
+    section article p {
+      font-weight: normal;
+      line-height: 1.5em;
+      font-size: 1em;
+      margin: 0.5em 0px;
+    }
+
+    section article h1 a {
+      color: rgb(0, 113, 179);
+      text-decoration: none;
+    }
+
+    section article h1 small {
+      font-weight: normal;
+      display: block;
+    }
+
+    section article a::after {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      bottom: 0px;
+      right: 0px;
+      content: '';
+    }
+
+    section article footer p {
+      margin-right: 1em;
+    }
+
+    .sup {
+      position: relative;
+      bottom: 1ex;
+      font-size: 80%;
+    }
+
+    p.kamers::before {
+      content: '\25CF';
+      font-size: 0.8em;
+      margin-right: 0.5em;
+    }
+
+    h3 {
+      margin: 0px;
+      padding: 0px;
+      border: 0px;
+    }
+
+    figure img {
+      width: 100%;
+      height: auto;
+    }
+
+    .location {
+      position: relative;
+    }
+
+    .select ul {
+      height: 100%;
+      padding: 0px;
+    }
+
+    .hidden {
+      display: none;
+      height: 0%;
+    }
+
 </style>
