--- a/public/css/style.css
+++ b/public/css/style.css
@@ -186,13 +186,14 @@ label {
   padding: 0.8em 1em;
 }
 
-input[type="submit"]{
-    padding: 1em 2em;
+input[type="submit"] {
+    padding: 1.3em 2em;
     border: none;
     background: #0071B3;
     color: white;
     font-size: 1em;
-    border-radius: 0.2em
+    border-radius: 0.2em;
+    margin-bottom: 0.5em;
 }
 
 form + section {
