--- a/views/offline.handlebars
+++ b/views/offline.handlebars
@@ -1,2 +1,3 @@
-
-<h1>Something went wrong. There is a problem with the internet connection</h1>
+<section>
+  <h1>Something went wrong. There is a problem with the internet connection</h1>
+</section>
