--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,15 +1,13 @@
 <section>
-
     <h3>{{data.TotaalAantalObjecten}} resultaten voor "{{data.Metadata.Omschrijving}}"</h3>
     {{#each data.Objects}}
     <article>
-        <img height="200" src="{{FotoMedium}}" alt="{{Adres}}" />
+        <img height="200" class="lazyload" src="{{FotoMedium}}" alt="{{Adres}}" />
         <h1>
             <a id="{{Id}}" href="/house/{{Id}}">{{Adres}}</a>
             <small>{{Postcode}} {{Woonplaats}}</small>
         </h1>
         <p><strong>{{{PrijsGeformatteerdHtml}}}</strong></p>
-
         <footer>
             <p>{{Woonoppervlakte}}m<span class="sup">2</span> / {{Perceeloppervlakte}}m<span class="sup">2</span>
             <p class="kamers">{{AantalKamers}} Kamers</span></p>
@@ -17,10 +15,8 @@
     </article>
     {{/each}}
 </section>
-
 <footer>
     <h4>Aantal pagina's: {{data.Paging.AantalPaginas}}</h4>
-
     {{#if data.Paging.VorigeUrl }}
         <a href="/house{{#replace data.Paging.VorigeUrl }}{{/replace}}" id="{{data.Paging.VorigeUrl}}">Vorige</a>
     {{/if}}
@@ -28,8 +24,4 @@
     {{#if data.Paging.VolgendeUrl }}
         <a href="/house{{#replace data.Paging.VolgendeUrl }}{{/replace}}" id="{{data.Paging.VolgendeUrl}}">Volgende</a>
     {{/if}}
-    <!-- <nav>
-        <ul>
-        </ul>
-    </nav> -->
 </footer>
